# recode_aac

./: CMakeLists.txt  aacDecode.cpp  aacDecode.hh  aacEncode.cpp  aacEncode.hh  main.c  main.cpp
